improved use case of hyperdrive

--- a/notebooks/azure-ml/schedule_hyperdrive_run.ipynb
+++ b/notebooks/azure-ml/schedule_hyperdrive_run.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from azureml.core import Workspace, Environment, Experiment, ScriptRunConfig\n",
@@ -35,14 +35,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T16:46:00.100291572Z",
-     "start_time": "2023-07-15T16:45:59.929410214Z"
+     "end_time": "2023-07-15T17:59:21.017122004Z",
+     "start_time": "2023-07-15T17:59:20.252378480Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "# workspace settings\n",
@@ -53,14 +53,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T16:46:05.422860444Z",
-     "start_time": "2023-07-15T16:46:03.303450741Z"
+     "end_time": "2023-07-15T17:59:25.309712683Z",
+     "start_time": "2023-07-15T17:59:21.300178579Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# experiment settings\n",
@@ -75,13 +75,18 @@
     "  evaluation_interval=10, delay_evaluation=50\n",
     ")\n",
     "\n",
+    "ne = [500] * 4\n",
+    "ia = ['relu'] * 4\n",
+    "oa = ['softmax'] * 4\n",
+    "op = ['adam'] * 4\n",
+    "lo = ['categorical_crossentropy'] * 4\n",
     "param_sampling = GridParameterSampling({\n",
-    "  'batch-size': choice(32, 32, 32),\n",
-    "  'num-epochs': choice(400, 400, 400),\n",
-    "  'input-activation': choice('relu', 'relu', 'relu'),\n",
-    "  'output-activation': choice('softmax', 'softmax', 'softmax'),\n",
-    "  'optimizer': choice('adam', 'adamax', 'adadelta'),\n",
-    "  'loss': choice('categorical_crossentropy', 'categorical_crossentropy', 'categorical_crossentropy'),\n",
+    "  'batch-size': choice(8, 16, 32, 64),\n",
+    "  'num-epochs': choice(ne),\n",
+    "  'input-activation': choice(ia),\n",
+    "  'output-activation': choice(oa),\n",
+    "  'optimizer': choice(op),\n",
+    "  'loss': choice(lo),\n",
     "})\n",
     "\n",
     "hd_config = HyperDriveConfig(\n",
@@ -99,8 +104,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T16:59:19.055773691Z",
-     "start_time": "2023-07-15T16:59:18.019446196Z"
+     "end_time": "2023-07-15T17:59:25.310479498Z",
+     "start_time": "2023-07-15T17:59:23.735218517Z"
     }
    }
   },
@@ -112,21 +117,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://ml.azure.com/runs/HD_6dd6d48a-31a1-4632-b784-df7741b3424b?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
-      "RunId: HD_6dd6d48a-31a1-4632-b784-df7741b3424b\n",
-      "Web View: https://ml.azure.com/runs/HD_6dd6d48a-31a1-4632-b784-df7741b3424b?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
+      "https://ml.azure.com/runs/HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
+      "RunId: HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0\n",
+      "Web View: https://ml.azure.com/runs/HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
       "\n",
       "Streaming azureml-logs/hyperdrive.txt\n",
       "=====================================\n",
       "\n",
-      "[2023-07-15T16:59:22.938242][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space\n",
-      "[2023-07-15T16:59:23.5125131Z][SCHEDULER][INFO]Scheduling job, id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_0' \n",
-      "[2023-07-15T16:59:23.6672284Z][SCHEDULER][INFO]Scheduling job, id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_1' \n",
-      "[2023-07-15T16:59:23.7756683Z][SCHEDULER][INFO]Scheduling job, id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_2' \n",
-      "[2023-07-15T16:59:23.724978][GENERATOR][INFO]Successfully sampled '3' jobs, they will soon be submitted to the execution target.\n",
-      "[2023-07-15T16:59:25.3160705Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_1' \n",
-      "[2023-07-15T16:59:25.3185530Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_0' \n",
-      "[2023-07-15T16:59:25.3461194Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_6dd6d48a-31a1-4632-b784-df7741b3424b_2' \n"
+      "[2023-07-15T17:59:31.145864][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space\n",
+      "[2023-07-15T17:59:31.7991424Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_0' \n",
+      "[2023-07-15T17:59:31.9543423Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_1' \n",
+      "[2023-07-15T17:59:32.0350453Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_2' \n",
+      "[2023-07-15T17:59:32.1771952Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_3' \n",
+      "[2023-07-15T17:59:32.137076][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.\n",
+      "[2023-07-15T17:59:32.9830032Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_0' \n",
+      "[2023-07-15T17:59:33.0563462Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_1' \n",
+      "[2023-07-15T17:59:33.2090491Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_2' \n",
+      "[2023-07-15T17:59:33.3019873Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_3' \n"
      ]
     }
    ],
@@ -140,7 +147,7 @@
     "collapsed": false,
     "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-07-15T16:59:20.063752306Z"
+     "start_time": "2023-07-15T17:59:28.757794432Z"
     }
    }
   },
