improved use case of hyperdrive (2)

--- a/notebooks/azure-ml/schedule_hyperdrive_run.ipynb
+++ b/notebooks/azure-ml/schedule_hyperdrive_run.ipynb
@@ -25,24 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "from azureml.core import Workspace, Environment, Experiment, ScriptRunConfig\n",
-    "from azureml.train.hyperdrive import HyperDriveConfig, MedianStoppingPolicy, PrimaryMetricGoal, GridParameterSampling, \\\n",
-    "  choice"
+    "from azureml.train.hyperdrive import (\n",
+    "  HyperDriveConfig,\n",
+    "  MedianStoppingPolicy,\n",
+    "  PrimaryMetricGoal,\n",
+    "  GridParameterSampling,\n",
+    "  choice)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T17:59:21.017122004Z",
-     "start_time": "2023-07-15T17:59:20.252378480Z"
+     "end_time": "2023-07-15T20:06:01.167002842Z",
+     "start_time": "2023-07-15T20:06:01.038203695Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "# workspace settings\n",
@@ -53,14 +57,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T17:59:25.309712683Z",
-     "start_time": "2023-07-15T17:59:21.300178579Z"
+     "end_time": "2023-07-15T20:06:03.993452353Z",
+     "start_time": "2023-07-15T20:06:02.140240135Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# experiment settings\n",
@@ -72,16 +76,16 @@
     ")\n",
     "\n",
     "early_termination_policy = MedianStoppingPolicy(\n",
-    "  evaluation_interval=10, delay_evaluation=50\n",
+    "  evaluation_interval=1, delay_evaluation=10\n",
     ")\n",
-    "\n",
-    "ne = [500] * 4\n",
-    "ia = ['relu'] * 4\n",
-    "oa = ['softmax'] * 4\n",
-    "op = ['adam'] * 4\n",
-    "lo = ['categorical_crossentropy'] * 4\n",
+    "num_params = 4\n",
+    "ne = [500] * num_params\n",
+    "ia = ['relu'] * num_params\n",
+    "oa = ['softmax'] * num_params\n",
+    "op = ['adam'] * num_params\n",
+    "lo = ['categorical_crossentropy'] * num_params\n",
     "param_sampling = GridParameterSampling({\n",
-    "  'batch-size': choice(8, 16, 32, 64),\n",
+    "  'batch-size': choice(4, 8, 16, 32),\n",
     "  'num-epochs': choice(ne),\n",
     "  'input-activation': choice(ia),\n",
     "  'output-activation': choice(oa),\n",
@@ -93,8 +97,8 @@
     "  policy=early_termination_policy,\n",
     "  run_config=script,\n",
     "  hyperparameter_sampling=param_sampling,\n",
-    "  primary_metric_name=\"accuracy\",\n",
-    "  primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "  primary_metric_name=\"loss\",\n",
+    "  primary_metric_goal=PrimaryMetricGoal.MINIMIZE,\n",
     "  max_total_runs=50,\n",
     "  max_concurrent_runs=4\n",
     ")\n",
@@ -104,37 +108,60 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-15T17:59:25.310479498Z",
-     "start_time": "2023-07-15T17:59:23.735218517Z"
+     "end_time": "2023-07-15T20:06:05.223921449Z",
+     "start_time": "2023-07-15T20:06:04.726510837Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://ml.azure.com/runs/HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
-      "RunId: HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0\n",
-      "Web View: https://ml.azure.com/runs/HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
+      "https://ml.azure.com/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
+      "RunId: HD_f70bd050-3847-4d40-9f16-64b347e2b5d2\n",
+      "Web View: https://ml.azure.com/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
       "\n",
       "Streaming azureml-logs/hyperdrive.txt\n",
       "=====================================\n",
       "\n",
-      "[2023-07-15T17:59:31.145864][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space\n",
-      "[2023-07-15T17:59:31.7991424Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_0' \n",
-      "[2023-07-15T17:59:31.9543423Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_1' \n",
-      "[2023-07-15T17:59:32.0350453Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_2' \n",
-      "[2023-07-15T17:59:32.1771952Z][SCHEDULER][INFO]Scheduling job, id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_3' \n",
-      "[2023-07-15T17:59:32.137076][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.\n",
-      "[2023-07-15T17:59:32.9830032Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_0' \n",
-      "[2023-07-15T17:59:33.0563462Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_1' \n",
-      "[2023-07-15T17:59:33.2090491Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_2' \n",
-      "[2023-07-15T17:59:33.3019873Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_fd8a2ec9-b5cd-42b7-a99e-66b3ba6b6ab0_3' \n"
+      "[2023-07-15T20:06:10.410494][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space\n",
+      "[2023-07-15T20:06:11.0354190Z][SCHEDULER][INFO]Scheduling job, id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_1' \n",
+      "[2023-07-15T20:06:10.9271469Z][SCHEDULER][INFO]Scheduling job, id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_0' \n",
+      "[2023-07-15T20:06:11.1383202Z][SCHEDULER][INFO]Scheduling job, id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_2' \n",
+      "[2023-07-15T20:06:11.2574300Z][SCHEDULER][INFO]Scheduling job, id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_3' \n",
+      "[2023-07-15T20:06:11.200680][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.\n",
+      "[2023-07-15T20:06:12.0886478Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_0' \n",
+      "[2023-07-15T20:06:12.1240117Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_1' \n",
+      "[2023-07-15T20:06:12.3563226Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_3' \n",
+      "[2023-07-15T20:06:12.6139087Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_2' \n",
+      "[2023-07-15T20:08:09.351973][ENFORCER][INFO]Request cancellation of job https://westeurope.api.azureml.ms/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourceGroups/market-performance-eu-we/providers/Microsoft.MachineLearningServices/workspaces/mp-ml-workspace/experiments/**SCRUBBED**/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_3, sequence 382\n",
+      "[2023-07-15T20:08:09.527729][ENFORCER][INFO]Policy cancelled 1 jobs\n",
+      "[2023-07-15T20:08:10.234485][GENERATOR][INFO]Trying to sample '1' jobs from the hyperparameter space\n",
+      "[2023-07-15T20:08:10.304871][GENERATOR][WARNING]Could not sample any more jobs from the space.\n",
+      "[2023-07-15T20:08:39.408968][ENFORCER][INFO]Request cancellation of job https://westeurope.api.azureml.ms/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourceGroups/market-performance-eu-we/providers/Microsoft.MachineLearningServices/workspaces/mp-ml-workspace/experiments/**SCRUBBED**/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_2, sequence 261\n",
+      "[2023-07-15T20:08:39.611607][ENFORCER][INFO]Policy cancelled 1 jobs\n",
+      "[2023-07-15T20:09:39.669745][ENFORCER][INFO]Request cancellation of job https://westeurope.api.azureml.ms/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourceGroups/market-performance-eu-we/providers/Microsoft.MachineLearningServices/workspaces/mp-ml-workspace/experiments/**SCRUBBED**/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_0, sequence 438\n",
+      "[2023-07-15T20:09:39.840344][ENFORCER][INFO]Policy cancelled 1 jobs\n",
+      "[2023-07-15T20:10:13.380865][CONTROLLER][INFO]Experiment was 'ExperimentStatus.RUNNING', is 'ExperimentStatus.FINISHED'.\n",
+      "\n",
+      "Execution Summary\n",
+      "=================\n",
+      "RunId: HD_f70bd050-3847-4d40-9f16-64b347e2b5d2\n",
+      "Web View: https://ml.azure.com/runs/HD_f70bd050-3847-4d40-9f16-64b347e2b5d2?wsid=/subscriptions/0d64c10a-a916-4b57-a110-e8573d336df4/resourcegroups/market-performance-eu-we/workspaces/mp-ml-workspace&tid=0de756ee-8c66-424e-89f7-7b0b1483eb80\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "{'runId': 'HD_f70bd050-3847-4d40-9f16-64b347e2b5d2',\n 'target': 'cpu-compute-cluster',\n 'status': 'Completed',\n 'startTimeUtc': '2023-07-15T20:06:09.663834Z',\n 'endTimeUtc': '2023-07-15T20:10:12.986264Z',\n 'services': {},\n 'properties': {'primary_metric_config': '{\"name\":\"loss\",\"goal\":\"minimize\"}',\n  'resume_from': 'null',\n  'runTemplate': 'HyperDrive',\n  'azureml.runsource': 'hyperdrive',\n  'platform': 'AML',\n  'ContentSnapshotId': '09c0fee2-1647-415d-b0a5-9c73969d9edd',\n  'user_agent': 'python/3.10.11 (Linux-5.15.0-76-generic-x86_64-with-glibc2.31) msrest/0.7.1 Hyperdrive.Service/1.0.0 Hyperdrive.SDK/core.1.52.0',\n  'space_size': '4096',\n  'score': '0.0205930694937706',\n  'best_child_run_id': 'HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_3',\n  'best_metric_status': 'Succeeded',\n  'best_data_container_id': 'dcid.HD_f70bd050-3847-4d40-9f16-64b347e2b5d2_3'},\n 'inputDatasets': [],\n 'outputDatasets': [],\n 'runDefinition': {'configuration': None,\n  'attribution': None,\n  'telemetryValues': {'amlClientType': 'azureml-sdk-train',\n   'amlClientModule': '[Scrubbed]',\n   'amlClientFunction': '[Scrubbed]',\n   'tenantId': '0de756ee-8c66-424e-89f7-7b0b1483eb80',\n   'amlClientRequestId': '9d5c3c86-80ef-4412-be2b-60873114e1eb',\n   'amlClientSessionId': '27f257b8-f9d9-40c1-98bb-5ebdb43b104e',\n   'subscriptionId': '0d64c10a-a916-4b57-a110-e8573d336df4',\n   'estimator': 'NoneType',\n   'samplingMethod': 'GRID',\n   'terminationPolicy': 'MedianStopping',\n   'primaryMetricGoal': 'minimize',\n   'maxTotalRuns': 50,\n   'maxConcurrentRuns': 4,\n   'maxDurationMinutes': 10080,\n   'vmSize': None},\n  'snapshotId': '09c0fee2-1647-415d-b0a5-9c73969d9edd',\n  'snapshots': [],\n  'sourceCodeDataReference': None,\n  'parentRunId': None,\n  'dataContainerId': None,\n  'runType': None,\n  'displayName': None,\n  'environmentAssetId': None,\n  'properties': {},\n  'tags': {},\n  'aggregatedArtifactPath': None},\n 'logFiles': {'azureml-logs/hyperdrive.txt': 'https://mpmlworkspace9309891769.blob.core.windows.net/azureml/ExperimentRun/dcid.HD_f70bd050-3847-4d40-9f16-64b347e2b5d2/azureml-logs/hyperdrive.txt?sv=2019-07-07&sr=b&sig=a%2FPAmvZHjxUpGW4kgwqzbdPm%2BNsUWFc6tGCdbVHI0Og%3D&skoid=a6dc798e-6552-4686-8fc0-dc2d1cc839b5&sktid=0de756ee-8c66-424e-89f7-7b0b1483eb80&skt=2023-07-15T16%3A08%3A06Z&ske=2023-07-17T00%3A18%3A06Z&sks=b&skv=2019-07-07&st=2023-07-15T20%3A00%3A26Z&se=2023-07-16T04%3A10%3A26Z&sp=r'},\n 'submittedBy': \"Bruno Sant'Anna\"}"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -145,9 +172,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-07-15T17:59:28.757794432Z"
+     "end_time": "2023-07-15T20:11:08.181500258Z",
+     "start_time": "2023-07-15T20:06:07.725125225Z"
     }
    }
   },
